--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,21 @@
      <option ng-repeat="name in names" value="{{name.listName}}">{{name.displayName}}</option>
     </select>
     <section class="books-container">
+<!--
      <div class="book" ng-repeat="book in books">
        <p>{{book.book_details[0].title}}</p>
        <p>{{book.book_details[0].contributor}} | {{book.book_details[0].publisher}}</p>
        <p class="book-description">{{book.book_details[0].description}}</p>
        <a href="{{book.amazon_product_url}}" class="buy-link">Amazon</a>
      </div> 
+-->
+   
+     <nyt-books-directive books-info="tradeFiction"></nyt-books-directive>
+     <nyt-books-directive books-info="massMarket"></nyt-books-directive>
+     <nyt-books-directive books-info="hardcoverFiction"></nyt-books-directive>
+     <nyt-books-directive books-info="hardcoverNonFiction"></nyt-books-directive>
     </section>
+    
     <div class="push"></div>
   </div>
   
