add babel and some es6 code

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="nytBooks">
 <head>
+ <meta http-equiv="X-UA-Compatible" content="IE=edge" >
   <meta charset="UTF-8">
   <title>NYT books</title>
   <link rel="stylesheet" href="./css/app.css">
