--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <title>NYT books</title>
   <link rel="stylesheet" href="./css/app.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="page-container">
-  <header class="page-header"></header>
+  <header class="page-header">
+    <h1 class="page-label">
+      <span><i class="fa fa-book" aria-hidden="true"></i> New York Times Books</span>
+    </h1>
+  </header>
     <div class="content-container">
       <div ng-view></div>
     </div>
@@ -17,4 +22,4 @@
   <footer class="page-footer"></footer>
 </body>
 <script src="./js/app.js"></script>
-</html>
+</html> 
