--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,18 @@
     <div class="push"></div>
   </div>
   
-  <footer class="page-footer"></footer>
+  <footer class="page-footer">
+    <div class="footer-content">
+      <p>Follow me</p>
+      <div class="follow">
+        <a href="https://vk.com/artsiomshushkevich"><i class="fa fa-vk" aria-hidden="true"></i></a>
+        <a href="https://github.com/artsiomshushkevich"><i class="fa fa-github" aria-hidden="true"></i></a>
+      </div>
+      <p class="copyright">
+        &copy; Artsiom Shushkevich 2016
+      </p>
+    </div>
+  </footer>
 </body>
 <script src="./js/app.js"></script>
 </html> 
