--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,8 +23,8 @@
     <div class="footer-content">
       <p>Follow me</p>
       <div class="follow">
-        <a href="https://vk.com/artsiomshushkevich"><i class="fa fa-vk" aria-hidden="true"></i></a>
-        <a href="https://github.com/artsiomshushkevich"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://vk.com/artsiomshushkevich"><i class="fa fa-vk" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://github.com/artsiomshushkevich"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
       <p class="copyright">
         &copy; Artsiom Shushkevich 2016
